# backend/src/generated/openapi.json
@@ -212,6 +212,104 @@
         }
       }
     },
+    "/charities/{id}": {
+      "get": {
+        "parameters": [
+          {
+            "schema": {
+              "type": "string",
+              "minLength": 1
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string"
+                    },
+                    "title": {
+                      "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
+                    "tab": {
+                      "type": "string",
+                      "enum": [
+                        "ORG",
+                        "CAMPAIGN",
+                        "MERCHANDISE"
+                      ]
+                    },
+                    "category_code": {
+                      "type": "string"
+                    },
+                    "logo_url": {
+                      "type": "string",
+                      "nullable": true
+                    },
+                    "amount_raised": {
+                      "type": "integer"
+                    },
+                    "amount_goal": {
+                      "type": "integer",
+                      "nullable": true
+                    },
+                    "created_at": {
+                      "type": "string",
+                      "format": "date-time"
+                    }
+                  },
+                  "required": [
+                    "id",
+                    "title",
+                    "description",
+                    "tab",
+                    "category_code",
+                    "logo_url",
+                    "amount_raised",
+                    "amount_goal",
+                    "created_at"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "enum": [
+                        "not_found"
+                      ]
+                    }
+                  },
+                  "required": [
+                    "error"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/categories": {
       "get": {
         "responses": {
